<resources>
    <string name="app_name">Objetos</string>

    <string name="menu">Menu</string>
    <string name="menu_information">Tu información</string>
    <string name="menu_images">Imagenes</string>
    <string name="menu_camera">Camara</string>
    <string name="menu_internet">Internet</string>
    <string name="menu_gps">GPS</string>
    <string name="menu_credits">Creditos</string>
    <string name="menu_exit">Salir</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_internet">InternetActivity</string>
    <string name="internet_text_url">Introduce tu URL</string>
    <string name="txt_next">Siguiente</string>
    <string name="txt_back">Atras</string>
    <string name="txt_take_photo">Tomar</string>
    <string name="txt_search">Buscar</string>

    <string name="txtBienvenido"></string>
    <string name="txtNacionalidad"></string>
    <string name="txtEdad"></string>
    <string name="txtTelefono"></string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_anterior">Anterior</string>
    <string name="txtCreditos"></string>
    <string name="btnsSiguiente">Siguiente</string>
    <string name="btnsAnterior">Anterior</string>
    <string name="ingresa_tu_nombre">Ingresa tu nombre</string>
    <string name="fecha">Fecha</string>
</resources>
